--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter:
     sdk: flutter    
   meshagent: ^0.8.4
+  flutter_js: ^0.8.1
+  
 
 dev_dependencies:
   flutter_lints: ^6.0.0
@@ -43,3 +45,6 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+flutter:
+  assets:
+    - js/
