--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
     sdk: flutter    
   meshagent: ^0.8.4
   flutter_js: ^0.8.1
-  
+  web: ^1.1.0
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
