--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_js: ^0.8.1
   web: ^1.1.0
   logging: ^1.3.0
+  livekit_client: ^2.4.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
